[package]
name = "transfer_lamports"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program="1.9.17"
borsh = "0.9.3"
borsh-derive = "0.9.3"
spl-token = "3.3.0"
thiserror = "1.0.0"

[features]
no-entrypoint = []

[dev-dependencies]
solana-program-test = "1.9.17"
solana-sdk = "1.9.17"

[lib]
crate-type = ["cdylib", "lib"]
